--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,20 +1,5 @@
-{
-  "$schema": "https://railway.com/railway.schema.json",
-  "build": {
-    "builder": "NIXPACKS",
-    "nixpacksConfigPath": "nixpacks.toml"
-  },
-  "deploy": {
-    "runtime": "V2",
-    "numReplicas": 1,
-    "startCommand": "bash install.sh && python weight_estimator_api.py",
-    "sleepApplication": false,
-    "multiRegionConfig": {
-      "asia-southeast1-eqsg3a": {
-        "numReplicas": 1
-      }
-    },
-    "restartPolicyType": "ON_FAILURE",
-    "restartPolicyMaxRetries": 10
-  }
-}
+[phases.setup]
+nixPkgs = ["libGL"]
+
+[start]
+cmd = "python weight_estimator_api.py"
