--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-flask
-tensorflow
-opencv-python
-numpy
+Flask==2.3.3
+tensorflow==2.13.0
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
+Pillow==10.0.1
+gunicorn==21.2.0
