--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-flask
-gunicorn
-tensorflow==2.16.1
-opencv-python-headless
-numpy
+Flask
 flask-cors
+opencv-python-headless==4.9.0.80
+numpy
+tensorflow-cpu==2.13.0
 psutil
